# orbs-and-wizards

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md
Levels/: level00.lvl  level01.lvl  level02.lvl  level03.lvl  level04.lvl  level05.lvl
src/: main.cpp
src/Engine/: Camera.cpp  Camera.h  Enums.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  Image.cpp  Image.h  Level.cpp  Level.h  LevelCreator.cpp  LevelCreator.h  SpriteSheet.cpp  SpriteSheet.h  UI.cpp  UI.h  Vector2D.cpp  Vector2D.h  tinyxml2.cpp  tinyxml2.h
src/Engine/States/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  GameWonState.cpp  GameWonState.h  LevelCreatorSelector.cpp  LevelCreatorSelector.h  LevelCreatorState.cpp  LevelCreatorState.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h  State.h
src/Objects/: Block.cpp  Block.h  Door.cpp  Door.h  Entity.cpp  Entity.h  HittableEnemy.cpp  HittableEnemy.h  Orb.cpp  Orb.h  Player.cpp  Player.h  Potion.cpp  Potion.h  Rune.cpp  Rune.h  RuneKey.cpp  RuneKey.h  Skeleton.cpp  Skeleton.h  SparkleAnimation.cpp  SparkleAnimation.h  Turret.cpp  Turret.h
